Get correct API output (I believe) for collection2
(1) Flipped order of kmp and java plugins (due to b/205844758)
(2) Fixed a few errors flagged by metalava
(3) Force-updated API

Bug: 205822870
Test: ./gradlew :collection2:collection2:ignoreApiChanges && ./gradlew :collection2:collection2:updateApi
Relnote: Corrected kotlin API output due to b/205822870

Change-Id: I4a3f9a27aea5a3088396fb71142521f0094bb8a8

--- a/collection2/collection2/build.gradle
+++ b/collection2/collection2/build.gradle
@@ -30,8 +30,9 @@ buildscript {
 
 plugins {
     id("AndroidXPlugin")
-    id("java") // https://github.com/gradle/gradle/issues/18622
+    // multiplatform must be above java due to b/205844758
     id("org.jetbrains.kotlin.multiplatform")
+    id("java") // https://github.com/gradle/gradle/issues/18622
     id("me.champeau.gradle.japicmp")
 }
 
