LazyList item click handling
Support click handling with LazyColumn by creating a list adapter
PendingIntent template, and filling in for each click action.

For action callbacks, we use an activity trampoline to begin the
callback broadcast receiver.

For activity starts, to properly fill in the pending intent in such a
way that they are not filter equals, we either set an identifier on the
activity intent after Api 29, or use an activity trampoline with a
unique data field before Api 29.

Bug: 198618359
Test: ./gradlew :glance:glance-appwidget:connectedAndroidTest
Test: ./gradlew :glance:glance-appwidget:integration-tests:demos:installDebug
Change-Id: I72e7e5e5538750383bd2745cda3898f0d10503aa

--- a/glance/glance-appwidget/src/androidMain/AndroidManifest.xml
+++ b/glance/glance-appwidget/src/androidMain/AndroidManifest.xml
@@ -17,6 +17,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="androidx.glance.appwidget" >
     <application>
+        <activity
+            android:name=".ListAdapterLaunchActivityTrampolineActivity"
+            android:exported="false"
+            android:enabled="true" />
+        <activity
+            android:name=".ListAdapterCallbackTrampolineActivity"
+            android:exported="false"
+            android:taskAffinity="androidx.glance.appwidget.ListAdapterCallbackTrampoline"
+            android:theme="@style/Widget.Glance.AppWidget.CallbackTrampoline"
+            android:launchMode="singleInstance"
+            android:noHistory="true"
+            android:enabled="true" />
         <receiver
             android:name=".ActionCallbackBroadcastReceiver"
             android:exported="false"
