Update glance list example to include click interactions
Updates the lazy column example to include activity start and runnable
invocation. Click handling from a lazy column are managed differently
than other widget clicks, as they must make use of a PendingIntent
template, filled in by each click directive.

Bug: 198618359
Test: local
Change-Id: I2a1f09762b516887e7896bb3679b29b6b30fd2ed

--- a/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
 
         <activity android:name=".ActionDemoActivity" />
 
+        <activity android:name=".ListClickDestinationActivity" android:exported="false" />
+
         <receiver
             android:name="androidx.glance.appwidget.demos.ResponsiveAppWidgetReceiver"
             android:enabled="@bool/glance_appwidget_available"
