Collect multiple compose trees per root view
Before this change: we returned exactly 1 compose tree per root view.
However if:
- a view contains multiple ComposeView nodes
- a compose app has an AndroidView with a ComposeView
there are compose trees that we miss.

In this change: change the nodes cache to store multiple trees per
root view.

Fixes: 205886274
Test: Unit test added
Change-Id: I784b83995e8f70d0056f323a2777dd64f60f0cc5

--- a/compose/ui/ui-inspection/src/androidTest/AndroidManifest.xml
+++ b/compose/ui/ui-inspection/src/androidTest/AndroidManifest.xml
@@ -17,6 +17,7 @@
 
     <application>
         <activity android:name="androidx.compose.ui.inspection.testdata.AndroidViewTestActivity" />
+        <activity android:name="androidx.compose.ui.inspection.testdata.ComposeViewTestActivity" />
         <activity android:name="androidx.compose.ui.inspection.testdata.DialogTestActivity" />
         <activity android:name="androidx.compose.ui.inspection.testdata.ParametersTestActivity" />
         <activity android:name="androidx.compose.ui.inspection.testdata.RippleTestActivity" />
