Create appsearch-builtin-types artifact under appsearch library
generated api using ./gradlew :appsearch:appsearch-builtin-types:updateApi

Test: added unit test
Relnote: add new appsearch-builtin-types artifact, and add Timer built-in type
Change-Id: I9ab510cb9a94608a5b86ff43893aac00d72af9c5

--- a/settings.gradle
+++ b/settings.gradle
@@ -225,6 +225,7 @@ includeProject(":appcompat:appcompat-lint", "appcompat/appcompat-lint", [BuildTy
 includeProject(":appcompat:appcompat-resources", "appcompat/appcompat-resources", [BuildType.MAIN])
 includeProject(":appcompat:integration-tests:receive-content-testapp", "appcompat/integration-tests/receive-content-testapp", [BuildType.MAIN])
 includeProject(":appsearch:appsearch", "appsearch/appsearch", [BuildType.MAIN])
+includeProject(":appsearch:appsearch-builtin-types", "appsearch/appsearch-builtin-types", [BuildType.MAIN])
 includeProject(":appsearch:appsearch-compiler", "appsearch/compiler", [BuildType.MAIN])
 includeProject(":appsearch:appsearch-debug-view", "appsearch/appsearch-debug-view", [BuildType.MAIN])
 includeProject(":appsearch:appsearch-debug-view:samples", "appsearch/appsearch-debug-view/samples",
