--- a/appsearch/appsearch-builtin-types/src/androidTest/AndroidManifest.xml
+++ b/appsearch/appsearch-builtin-types/src/androidTest/AndroidManifest.xml
@@ -15,5 +15,4 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="androidx.appsearch.builtintypes.test">
-</manifest>
+          package="androidx.appsearch.builtintypes.test"/>
