--- a/lifecycle/lifecycle-process/build.gradle
+++ b/lifecycle/lifecycle-process/build.gradle
@@ -32,6 +32,7 @@ android {
 dependencies {
     api(project(":lifecycle:lifecycle-runtime"))
     api("androidx.startup:startup-runtime:1.0.0")
+    api("androidx.annotation:annotation:1.2.0")
 
     testImplementation(libs.junit)
     testImplementation(libs.mockitoCore)
