Workmanager: Remove @Keep annotations
Test: manual
fixes: 187446990
Relnote: NA
Change-Id: I32fd387c28128e1cf2a4bfa47d30b9b3364fbb3c

--- a/work/work-gcm/build.gradle
+++ b/work/work-gcm/build.gradle
@@ -23,6 +23,12 @@ plugins {
     id("kotlin-android")
 }
 
+android {
+    buildTypes.all {
+        consumerProguardFiles "proguard-rules.pro"
+    }
+}
+
 dependencies {
     api project(":work:work-runtime")
     implementation(libs.gcmNetworkManager)
