--- a/glance/glance-appwidget/integration-tests/demos/build.gradle
+++ b/glance/glance-appwidget/integration-tests/demos/build.gradle
@@ -28,13 +28,13 @@ dependencies {
     implementation(libs.kotlinStdlib)
     implementation(project(":glance:glance"))
     implementation(project(":glance:glance-appwidget"))
-    implementation(project(":compose:material:material"))
-    implementation(project(":compose:ui:ui"))
-    implementation(project(":compose:foundation:foundation"))
-    implementation(project(":compose:foundation:foundation-layout"))
-    implementation(project(":compose:material:material"))
-    implementation(project(":activity:activity"))
-    implementation(project(":activity:activity-compose"))
+    implementation("androidx.activity:activity:1.4.0")
+    implementation("androidx.activity:activity-compose:1.4.0")
+    implementation("androidx.compose.material:material:1.1.0-beta02")
+    implementation("androidx.compose.ui:ui:1.1.0-beta02")
+    implementation("androidx.compose.foundation:foundation:1.1.0-beta02")
+    implementation("androidx.compose.foundation:foundation-layout:1.1.0-beta02")
+    implementation("androidx.compose.material:material:1.1.0-beta02")
     implementation("androidx.datastore:datastore-preferences-core:1.0.0")
     implementation("androidx.datastore:datastore-preferences:1.0.0-rc02")
 }
