--- a/core/core-remoteviews/build.gradle
+++ b/core/core-remoteviews/build.gradle
@@ -30,8 +30,10 @@ plugins {
 dependencies {
     api(libs.kotlinStdlib)
     api("androidx.annotation:annotation:1.2.0")
-    implementation("androidx.core:core:1.7.0")
+    implementation project(":core:core")
 
+    androidTestImplementation project(":core:core")
+    androidTestImplementation project(":core:core-ktx")
     androidTestImplementation(libs.kotlinStdlib)
     androidTestImplementation(libs.kotlinTest)
     androidTestImplementation(libs.testExtJunit)
@@ -40,6 +42,8 @@ dependencies {
     androidTestImplementation(libs.testRules)
     androidTestImplementation(libs.truth)
 
+    testImplementation project(":core:core")
+    testImplementation project(":core:core-ktx")
     testImplementation(libs.testCore)
     testImplementation(libs.testRunner)
     testImplementation(libs.junit)
