--- a/appcompat/appcompat/build.gradle
+++ b/appcompat/appcompat/build.gradle
@@ -11,7 +11,7 @@ plugins {
 
 dependencies {
     api(project(":annotation:annotation"))
-    api("androidx.core:core:1.7.0")
+    api(project(":core:core"))
 
     implementation(project(":emoji2:emoji2"))
     implementation(project(":emoji2:emoji2-views-helper"))
