--- a/docs-public/build.gradle
+++ b/docs-public/build.gradle
@@ -11,9 +11,9 @@ dependencies {
     docs("androidx.ads:ads-identifier:1.0.0-alpha04")
     docs("androidx.ads:ads-identifier-provider:1.0.0-alpha04")
     docs("androidx.annotation:annotation:1.3.0")
-    docs("androidx.annotation:annotation-experimental:1.2.0-alpha01")
-    docs("androidx.appcompat:appcompat:1.4.0-rc01")
-    docs("androidx.appcompat:appcompat-resources:1.4.0-rc01")
+    docs("androidx.annotation:annotation-experimental:1.2.0-beta01")
+    docs("androidx.appcompat:appcompat:1.4.0")
+    docs("androidx.appcompat:appcompat-resources:1.4.0")
     docs("androidx.appsearch:appsearch:1.0.0-alpha04")
     docs("androidx.appsearch:appsearch-ktx:1.0.0-alpha04")
     docs("androidx.appsearch:appsearch-local-storage:1.0.0-alpha04")
@@ -27,9 +27,9 @@ dependencies {
     docs("androidx.benchmark:benchmark-junit4:1.1.0-beta01")
     docs("androidx.benchmark:benchmark-macro:1.1.0-beta01")
     docs("androidx.benchmark:benchmark-macro-junit4:1.1.0-beta01")
-    docs("androidx.biometric:biometric:1.2.0-alpha03")
-    docs("androidx.biometric:biometric-ktx:1.2.0-alpha03")
-    samples("androidx.biometric:biometric-ktx-samples:1.2.0-alpha03")
+    docs("androidx.biometric:biometric:1.2.0-alpha04")
+    docs("androidx.biometric:biometric-ktx:1.2.0-alpha04")
+    samples("androidx.biometric:biometric-ktx-samples:1.2.0-alpha04")
     docs("androidx.browser:browser:1.4.0")
     docs("androidx.camera:camera-camera2:1.1.0-alpha10")
     docs("androidx.camera:camera-core:1.1.0-alpha10")
@@ -43,52 +43,52 @@ dependencies {
     docs("androidx.car.app:app-projected:1.2.0-alpha01")
     docs("androidx.car.app:app-testing:1.2.0-alpha01")
     docs("androidx.cardview:cardview:1.0.0")
-    docs("androidx.collection:collection:1.2.0-beta01")
-    docs("androidx.collection:collection-ktx:1.2.0-beta01")
-    docs("androidx.compose.animation:animation:1.1.0-beta02")
-    docs("androidx.compose.animation:animation-core:1.1.0-beta02")
-    docs("androidx.compose.animation:animation-graphics:1.1.0-beta02")
-    samples("androidx.compose.animation:animation-samples:1.1.0-beta02")
-    samples("androidx.compose.animation:animation-core-samples:1.1.0-beta02")
-    samples("androidx.compose.animation:animation-graphics-samples:1.1.0-beta02")
-    docs("androidx.compose.foundation:foundation:1.1.0-beta02")
-    docs("androidx.compose.foundation:foundation-layout:1.1.0-beta02")
-    samples("androidx.compose.foundation:foundation-layout-samples:1.1.0-beta02")
-    samples("androidx.compose.foundation:foundation-samples:1.1.0-beta02")
+    docs("androidx.collection:collection:1.2.0-rc01")
+    docs("androidx.collection:collection-ktx:1.2.0-rc01")
+    docs("androidx.compose.animation:animation:1.1.0-beta03")
+    docs("androidx.compose.animation:animation-core:1.1.0-beta03")
+    docs("androidx.compose.animation:animation-graphics:1.1.0-beta03")
+    samples("androidx.compose.animation:animation-samples:1.1.0-beta03")
+    samples("androidx.compose.animation:animation-core-samples:1.1.0-beta03")
+    samples("androidx.compose.animation:animation-graphics-samples:1.1.0-beta03")
+    docs("androidx.compose.foundation:foundation:1.1.0-beta03")
+    docs("androidx.compose.foundation:foundation-layout:1.1.0-beta03")
+    samples("androidx.compose.foundation:foundation-layout-samples:1.1.0-beta03")
+    samples("androidx.compose.foundation:foundation-samples:1.1.0-beta03")
     docs("androidx.compose.material3:material3:1.0.0-alpha01")
     samples("androidx.compose.material3:material3-samples:1.0.0-alpha01")
-    docs("androidx.compose.material:material:1.1.0-beta02")
-    docs("androidx.compose.material:material-icons-core:1.1.0-beta02")
-    samples("androidx.compose.material:material-icons-core-samples:1.1.0-beta02")
-    docs("androidx.compose.material:material-ripple:1.1.0-beta02")
-    samples("androidx.compose.material:material-samples:1.1.0-beta02")
-    docs("androidx.compose.runtime:runtime:1.1.0-beta02")
-    docs("androidx.compose.runtime:runtime-livedata:1.1.0-beta02")
-    samples("androidx.compose.runtime:runtime-livedata-samples:1.1.0-beta02")
-    docs("androidx.compose.runtime:runtime-rxjava2:1.1.0-beta02")
-    samples("androidx.compose.runtime:runtime-rxjava2-samples:1.1.0-beta02")
-    docs("androidx.compose.runtime:runtime-rxjava3:1.1.0-beta02")
-    samples("androidx.compose.runtime:runtime-rxjava3-samples:1.1.0-beta02")
-    docs("androidx.compose.runtime:runtime-saveable:1.1.0-beta02")
-    samples("androidx.compose.runtime:runtime-saveable-samples:1.1.0-beta02")
-    samples("androidx.compose.runtime:runtime-samples:1.1.0-beta02")
-    docs("androidx.compose.ui:ui:1.1.0-beta02")
-    docs("androidx.compose.ui:ui-geometry:1.1.0-beta02")
-    docs("androidx.compose.ui:ui-graphics:1.1.0-beta02")
-    samples("androidx.compose.ui:ui-graphics-samples:1.1.0-beta02")
-    docs("androidx.compose.ui:ui-test:1.1.0-beta02")
-    docs("androidx.compose.ui:ui-test-junit4:1.1.0-beta02")
-    docs("androidx.compose.ui:ui-text:1.1.0-beta02")
-    samples("androidx.compose.ui:ui-text-samples:1.1.0-beta02")
-    docs("androidx.compose.ui:ui-tooling:1.1.0-beta02")
-    docs("androidx.compose.ui:ui-tooling-data:1.1.0-beta02")
-    docs("androidx.compose.ui:ui-tooling-preview:1.1.0-beta02")
-    docs("androidx.compose.ui:ui-unit:1.1.0-beta02")
-    samples("androidx.compose.ui:ui-unit-samples:1.1.0-beta02")
-    docs("androidx.compose.ui:ui-util:1.1.0-beta02")
-    docs("androidx.compose.ui:ui-viewbinding:1.1.0-beta02")
-    samples("androidx.compose.ui:ui-viewbinding-samples:1.1.0-beta02")
-    samples("androidx.compose.ui:ui-samples:1.1.0-beta02")
+    docs("androidx.compose.material:material:1.1.0-beta03")
+    docs("androidx.compose.material:material-icons-core:1.1.0-beta03")
+    samples("androidx.compose.material:material-icons-core-samples:1.1.0-beta03")
+    docs("androidx.compose.material:material-ripple:1.1.0-beta03")
+    samples("androidx.compose.material:material-samples:1.1.0-beta03")
+    docs("androidx.compose.runtime:runtime:1.1.0-beta03")
+    docs("androidx.compose.runtime:runtime-livedata:1.1.0-beta03")
+    samples("androidx.compose.runtime:runtime-livedata-samples:1.1.0-beta03")
+    docs("androidx.compose.runtime:runtime-rxjava2:1.1.0-beta03")
+    samples("androidx.compose.runtime:runtime-rxjava2-samples:1.1.0-beta03")
+    docs("androidx.compose.runtime:runtime-rxjava3:1.1.0-beta03")
+    samples("androidx.compose.runtime:runtime-rxjava3-samples:1.1.0-beta03")
+    docs("androidx.compose.runtime:runtime-saveable:1.1.0-beta03")
+    samples("androidx.compose.runtime:runtime-saveable-samples:1.1.0-beta03")
+    samples("androidx.compose.runtime:runtime-samples:1.1.0-beta03")
+    docs("androidx.compose.ui:ui:1.1.0-beta03")
+    docs("androidx.compose.ui:ui-geometry:1.1.0-beta03")
+    docs("androidx.compose.ui:ui-graphics:1.1.0-beta03")
+    samples("androidx.compose.ui:ui-graphics-samples:1.1.0-beta03")
+    docs("androidx.compose.ui:ui-test:1.1.0-beta03")
+    docs("androidx.compose.ui:ui-test-junit4:1.1.0-beta03")
+    docs("androidx.compose.ui:ui-text:1.1.0-beta03")
+    samples("androidx.compose.ui:ui-text-samples:1.1.0-beta03")
+    docs("androidx.compose.ui:ui-tooling:1.1.0-beta03")
+    docs("androidx.compose.ui:ui-tooling-data:1.1.0-beta03")
+    docs("androidx.compose.ui:ui-tooling-preview:1.1.0-beta03")
+    docs("androidx.compose.ui:ui-unit:1.1.0-beta03")
+    samples("androidx.compose.ui:ui-unit-samples:1.1.0-beta03")
+    docs("androidx.compose.ui:ui-util:1.1.0-beta03")
+    docs("androidx.compose.ui:ui-viewbinding:1.1.0-beta03")
+    samples("androidx.compose.ui:ui-viewbinding-samples:1.1.0-beta03")
+    samples("androidx.compose.ui:ui-samples:1.1.0-beta03")
     docs("androidx.concurrent:concurrent-futures:1.1.0")
     docs("androidx.concurrent:concurrent-futures-ktx:1.1.0")
     docs("androidx.contentpager:contentpager:1.0.0")
@@ -114,10 +114,10 @@ dependencies {
     docs("androidx.drawerlayout:drawerlayout:1.1.1")
     docs("androidx.dynamicanimation:dynamicanimation:1.1.0-alpha02")
     docs("androidx.dynamicanimation:dynamicanimation-ktx:1.0.0-alpha03")
-    docs("androidx.emoji2:emoji2:1.0.0-rc01")
-    docs("androidx.emoji2:emoji2-bundled:1.0.0-rc01")
-    docs("androidx.emoji2:emoji2-views:1.0.0-rc01")
-    docs("androidx.emoji2:emoji2-views-helper:1.0.0-rc01")
+    docs("androidx.emoji2:emoji2:1.0.0")
+    docs("androidx.emoji2:emoji2-bundled:1.0.0")
+    docs("androidx.emoji2:emoji2-views:1.0.0")
+    docs("androidx.emoji2:emoji2-views-helper:1.0.0")
     docs("androidx.emoji:emoji:1.2.0-alpha03")
     docs("androidx.emoji:emoji-appcompat:1.2.0-alpha03")
     docs("androidx.emoji:emoji-bundled:1.2.0-alpha03")
@@ -132,14 +132,15 @@ dependencies {
     docs("androidx.heifwriter:heifwriter:1.1.0-alpha01")
     docs("androidx.hilt:hilt-common:1.0.0-beta01")
     docs("androidx.hilt:hilt-navigation:1.0.0-beta01")
-    docs("androidx.hilt:hilt-navigation-compose:1.0.0-alpha03")
+    docs("androidx.hilt:hilt-navigation-compose:1.0.0-beta01")
     samples("androidx.hilt:hilt-navigation-compose-samples:1.0.0-alpha04")
     docs("androidx.hilt:hilt-navigation-fragment:1.0.0-beta01")
     docs("androidx.hilt:hilt-work:1.0.0-beta01")
     docs("androidx.interpolator:interpolator:1.0.0")
-    docs("androidx.leanback:leanback:1.2.0-alpha01")
-    docs("androidx.leanback:leanback-paging:1.1.0-alpha08")
-    docs("androidx.leanback:leanback-preference:1.2.0-alpha01")
+    docs("androidx.leanback:leanback:1.2.0-alpha02")
+    docs("androidx.leanback:leanback-grid:1.0.0-alpha01")
+    docs("androidx.leanback:leanback-paging:1.1.0-alpha09")
+    docs("androidx.leanback:leanback-preference:1.2.0-alpha02")
     docs("androidx.leanback:leanback-tab:1.1.0-beta01")
     docs("androidx.lifecycle:lifecycle-common:2.4.0")
     docs("androidx.lifecycle:lifecycle-common-java8:2.4.0")
@@ -181,39 +182,39 @@ dependencies {
     docs("androidx.navigation:navigation-testing:2.4.0-beta02")
     docs("androidx.navigation:navigation-ui:2.4.0-beta02")
     docs("androidx.navigation:navigation-ui-ktx:2.4.0-beta02")
-    docs("androidx.paging:paging-common:3.1.0-rc01")
-    docs("androidx.paging:paging-common-ktx:3.1.0-rc01")
+    docs("androidx.paging:paging-common:3.1.0")
+    docs("androidx.paging:paging-common-ktx:3.1.0")
     docs("androidx.paging:paging-compose:1.0.0-alpha15")
     samples("androidx.paging:paging-compose-samples:3.0.0-alpha08")
-    docs("androidx.paging:paging-guava:3.1.0-rc01")
-    docs("androidx.paging:paging-runtime:3.1.0-rc01")
-    docs("androidx.paging:paging-runtime-ktx:3.1.0-rc01")
-    docs("androidx.paging:paging-rxjava2:3.1.0-rc01")
-    docs("androidx.paging:paging-rxjava2-ktx:3.1.0-rc01")
-    docs("androidx.paging:paging-rxjava3:3.1.0-rc01")
-    samples("androidx.paging:paging-samples:3.1.0-rc01")
+    docs("androidx.paging:paging-guava:3.1.0")
+    docs("androidx.paging:paging-runtime:3.1.0")
+    docs("androidx.paging:paging-runtime-ktx:3.1.0")
+    docs("androidx.paging:paging-rxjava2:3.1.0")
+    docs("androidx.paging:paging-rxjava2-ktx:3.1.0")
+    docs("androidx.paging:paging-rxjava3:3.1.0")
+    samples("androidx.paging:paging-samples:3.1.0")
     docs("androidx.palette:palette:1.0.0")
     docs("androidx.palette:palette-ktx:1.0.0")
     docs("androidx.percentlayout:percentlayout:1.0.1")
-    docs("androidx.preference:preference:1.2.0-alpha02")
-    docs("androidx.preference:preference-ktx:1.2.0-alpha02")
+    docs("androidx.preference:preference:1.2.0-beta01")
+    docs("androidx.preference:preference-ktx:1.2.0-beta01")
     docs("androidx.print:print:1.1.0-beta01")
-    docs("androidx.profileinstaller:profileinstaller:1.1.0-beta02")
+    docs("androidx.profileinstaller:profileinstaller:1.1.0-beta03")
     docs("androidx.recommendation:recommendation:1.0.0")
     docs("androidx.recyclerview:recyclerview:1.3.0-alpha01")
     docs("androidx.recyclerview:recyclerview-selection:2.0.0-alpha01")
     docs("androidx.remotecallback:remotecallback:1.0.0-alpha02")
     docs("androidx.resourceinspection:resourceinspection-annotation:1.0.0")
     docs("androidx.resourceinspection:resourceinspection-processor:1.0.0")
-    docs("androidx.room:room-common:2.4.0-beta01")
-    docs("androidx.room:room-guava:2.4.0-beta01")
-    docs("androidx.room:room-ktx:2.4.0-beta01")
-    docs("androidx.room:room-migration:2.4.0-beta01")
-    docs("androidx.room:room-paging:2.4.0-beta01")
-    docs("androidx.room:room-runtime:2.4.0-beta01")
-    docs("androidx.room:room-rxjava2:2.4.0-beta01")
-    docs("androidx.room:room-rxjava3:2.4.0-beta01")
-    docs("androidx.room:room-testing:2.4.0-beta01")
+    docs("androidx.room:room-common:2.4.0-beta02")
+    docs("androidx.room:room-guava:2.4.0-beta02")
+    docs("androidx.room:room-ktx:2.4.0-beta02")
+    docs("androidx.room:room-migration:2.4.0-beta02")
+    docs("androidx.room:room-paging:2.4.0-beta02")
+    docs("androidx.room:room-runtime:2.4.0-beta02")
+    docs("androidx.room:room-rxjava2:2.4.0-beta02")
+    docs("androidx.room:room-rxjava3:2.4.0-beta02")
+    docs("androidx.room:room-testing:2.4.0-beta02")
     docs("androidx.savedstate:savedstate:1.1.0")
     docs("androidx.savedstate:savedstate-ktx:1.1.0")
     docs("androidx.security:security-app-authenticator:1.0.0-alpha02")
@@ -227,14 +228,14 @@ dependencies {
     docs("androidx.slice:slice-core:1.1.0-alpha02")
     docs("androidx.slice:slice-view:1.1.0-alpha02")
     docs("androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01")
-    docs("androidx.sqlite:sqlite:2.2.0-beta01")
-    docs("androidx.sqlite:sqlite-framework:2.2.0-beta01")
-    docs("androidx.sqlite:sqlite-ktx:2.2.0-beta01")
+    docs("androidx.sqlite:sqlite:2.2.0-beta02")
+    docs("androidx.sqlite:sqlite-framework:2.2.0-beta02")
+    docs("androidx.sqlite:sqlite-ktx:2.2.0-beta02")
     docs("androidx.startup:startup-runtime:1.1.0")
     docs("androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01")
     docs("androidx.textclassifier:textclassifier:1.0.0-alpha03")
-    docs("androidx.tracing:tracing:1.1.0-alpha01")
-    docs("androidx.tracing:tracing-ktx:1.1.0-alpha01")
+    docs("androidx.tracing:tracing:1.1.0-alpha02")
+    docs("androidx.tracing:tracing-ktx:1.1.0-alpha02")
     docs("androidx.transition:transition:1.4.1")
     docs("androidx.transition:transition-ktx:1.4.1")
     docs("androidx.tvprovider:tvprovider:1.1.0-alpha01")
@@ -244,11 +245,11 @@ dependencies {
     docs("androidx.versionedparcelable:versionedparcelable:1.1.1")
     docs("androidx.viewpager2:viewpager2:1.1.0-beta01")
     docs("androidx.viewpager:viewpager:1.1.0-alpha01")
-    docs("androidx.wear.compose:compose-foundation:1.0.0-alpha10")
-    samples("androidx.wear.compose:compose-foundation-samples:1.0.0-alpha10")
-    docs("androidx.wear.compose:compose-material:1.0.0-alpha10")
-    samples("androidx.wear.compose:compose-material-samples:1.0.0-alpha10")
-    docs("androidx.wear.compose:compose-navigation:1.0.0-alpha10")
+    docs("androidx.wear.compose:compose-foundation:1.0.0-alpha11")
+    samples("androidx.wear.compose:compose-foundation-samples:1.0.0-alpha11")
+    docs("androidx.wear.compose:compose-material:1.0.0-alpha11")
+    samples("androidx.wear.compose:compose-material-samples:1.0.0-alpha11")
+    docs("androidx.wear.compose:compose-navigation:1.0.0-alpha11")
     docs("androidx.wear.tiles:tiles:1.0.0")
     docs("androidx.wear.tiles:tiles-proto:1.0.0")
     docs("androidx.wear.tiles:tiles-renderer:1.0.0")
@@ -284,11 +285,11 @@ dependencies {
     docs("androidx.window:window-rxjava2:1.0.0-beta03")
     docs("androidx.window:window-rxjava3:1.0.0-beta03")
     docs("androidx.window:window-testing:1.0.0-beta03")
-    docs("androidx.work:work-gcm:2.7.0")
-    docs("androidx.work:work-multiprocess:2.7.0")
-    docs("androidx.work:work-runtime:2.7.0")
-    docs("androidx.work:work-runtime-ktx:2.7.0")
-    docs("androidx.work:work-rxjava2:2.7.0")
-    docs("androidx.work:work-rxjava3:2.7.0")
-    docs("androidx.work:work-testing:2.7.0")
+    docs("androidx.work:work-gcm:2.7.1")
+    docs("androidx.work:work-multiprocess:2.7.1")
+    docs("androidx.work:work-runtime:2.7.1")
+    docs("androidx.work:work-runtime-ktx:2.7.1")
+    docs("androidx.work:work-rxjava2:2.7.1")
+    docs("androidx.work:work-rxjava3:2.7.1")
+    docs("androidx.work:work-testing:2.7.1")
 }
