Initial tests for window-sample
Test: added missing tests

Change-Id: I8f7c2cb62d05f9981813dcba18a2d803079e9857

--- a/window/window-samples/build.gradle
+++ b/window/window-samples/build.gradle
@@ -48,7 +48,14 @@ dependencies {
     implementation("androidx.startup:startup-runtime:1.1.0")
 
     implementation(project(":window:window"))
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
+    debugImplementation(libs.leakcanary)
+
+    androidTestImplementation(libs.testCore)
+    androidTestImplementation(libs.testExtJunit)
+    androidTestImplementation(libs.testRunner)
+    androidTestImplementation(libs.testRules)
+    androidTestImplementation(libs.espressoCore, excludes.espresso)
+    androidTestImplementation(project(":window:window-testing"))
 }
 
 androidx {
