--- a/activity/activity/build.gradle
+++ b/activity/activity/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     api(projectOrArtifact(":core:core"))
     api("androidx.lifecycle:lifecycle-runtime:2.3.1")
     api("androidx.lifecycle:lifecycle-viewmodel:2.3.1")
-    api("androidx.savedstate:savedstate:1.1.0")
+    api(projectOrArtifact(":savedstate:savedstate"))
     api("androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1")
     implementation("androidx.tracing:tracing:1.0.0")
     api(libs.kotlinStdlib)
