--- a/core/core-google-shortcuts/build.gradle
+++ b/core/core-google-shortcuts/build.gradle
@@ -31,10 +31,12 @@ android {
 }
 
 dependencies {
-    api("androidx.core:core:1.6.0-rc01")
+    api("androidx.core:core:1.7.0")
 
     implementation("com.google.firebase:firebase-appindexing:20.0.0")
     implementation("com.google.crypto.tink:tink-android:1.5.0")
+    implementation project(":appsearch:appsearch")
+    implementation project(":appsearch:appsearch-builtin-types")
 
     androidTestImplementation(libs.testExtJunit)
     androidTestImplementation(libs.testCore)
@@ -46,6 +48,7 @@ dependencies {
     androidTestImplementation(libs.dexmakerMockito, excludes.bytebuddy)
     androidTestImplementation(libs.truth)
     androidTestImplementation(libs.multidex)
+    androidTestImplementation("junit:junit:4.13")
 }
 
 androidx {
