Migrate Compose DemoApp to material3
This CL migrates the demo structure itself to use material3 where possible, including dynamic theming and component usage.

Most of the settings have been removed since they are rarely used, especially now that we have a dynamic theming. New setting has been introduced to allow to switch between dynamic theming and a material3 baseline theming. Material2 theming has been tweaked to derive colors from material3.

Bug: n/a
Test: DemoTest passes + manual
Change-Id: Ib5f4ae0b30eff3f910fb66e2987f8429e33ddc22

--- a/compose/integration-tests/demos/build.gradle
+++ b/compose/integration-tests/demos/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation(project(":compose:foundation:foundation-layout"))
     implementation(project(":compose:integration-tests:demos:common"))
     implementation(project(":compose:material:material"))
+    implementation(project(":compose:material3:material3"))
     implementation(project(":compose:runtime:runtime"))
     implementation(project(":compose:ui:ui"))
 
