Update libs.robolectric to version 4.7
Fix SDK level in AutomotiveCarInfoTest
Set camera2 and ui to use robolectric 4.6.1 until
their test are fixed

Test: presubmit
Bug: 206673076
Change-Id: I34cf00279f6357ecf3e91a9b135fd0da9aa202f2

--- a/compose/ui/ui/build.gradle
+++ b/compose/ui/ui/build.gradle
@@ -70,7 +70,7 @@ dependencies {
         testImplementation(libs.truth)
         testImplementation(libs.mockitoCore)
         testImplementation(libs.mockitoKotlin)
-        testImplementation(libs.robolectric)
+        testImplementation("org.robolectric:robolectric:4.6.1") // TODO(b/205731854): fix tests to work with SDK 31 and robolectric 4.7
         testImplementation(project(":compose:ui:ui-test-junit4"))
         testImplementation(project(":compose:test-utils"))
 
