Publish snapshots for glance-appwidget-proto
It seems that, without this, SNAPSHOTs are broken.

Relnote: n/a
Test: n/a
Change-Id: Ic55b2a21992fb1f8e0818693b52bbd98359cc55e

--- a/glance/glance-appwidget-proto/build.gradle
+++ b/glance/glance-appwidget-proto/build.gradle
@@ -97,7 +97,7 @@ protobuf {
 androidx {
     name = "Glance AppWidget Protos"
     type = LibraryType.PUBLISHED_LIBRARY
-    publish = Publish.NONE
+    publish = Publish.SNAPSHOT_ONLY
     mavenGroup = LibraryGroups.GLANCE
     inceptionYear = "2021"
     runApiTasks = new RunApiTasks.No("No public API required for internal use with app widgets.")
