Use Build.MEDIA_PERFORMANCE_CLASS on Android 12+
Test: ./gradlew :core:core-performance:testDebugUnitTest
Bug: 205731854
Change-Id: Iada85b21bdf40af57fc295c9309bb37c486542d3

--- a/core/core-performance/build.gradle
+++ b/core/core-performance/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testImplementation(libs.kotlinStdlib)
     testImplementation(libs.junit)
     testImplementation(libs.truth)
+    testImplementation(libs.robolectric)
 }
 
 androidx {
