Fix baselineprofile in non-compose macrobenchmarks
Fixes: 206856859
Test: ./gradlew profileinstaller:i-t:i-m-t:installRelease profileinstaller:i-t:i-m:cC
Test: ./gradlew benchmark:i-t:m-t:installRelease benchmark:i-t:m:cC
Test: ./gradlew wear:benchmark:i-t:m-t:installRelease wear:benchmark:i-t:m:cC

Change-Id: I28b6d6ce429c31fb517e21b43036215ac5dcb788

--- a/wear/benchmark/integration-tests/macrobenchmark-target/build.gradle
+++ b/wear/benchmark/integration-tests/macrobenchmark-target/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     implementation projectOrArtifact(":activity:activity-ktx")
     implementation 'androidx.core:core-ktx'
     implementation(libs.material)
+    implementation(project(":profileinstaller:profileinstaller"))
     implementation 'androidx.wear:wear:1.1.0'
 }
