--- a/benchmark/integration-tests/macrobenchmark-target/build.gradle
+++ b/benchmark/integration-tests/macrobenchmark-target/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation(libs.constraintLayout)
     implementation(project(":appcompat:appcompat"))
     implementation(project(":activity:activity"))
+    implementation(project(":profileinstaller:profileinstaller"))
     implementation(project(":recyclerview:recyclerview"))
     implementation(project(":tracing:tracing-ktx"))
     implementation(libs.material)
