Use robolectric 4.7 to test on SDK 31
Test: ./gradlew :core:core-performance:testDebugUnitTest
Bug: 205731854
Change-Id: I7730dc32dc6863c5f5495d0cc891dfd8b197a01d

--- a/core/core-performance/build.gradle
+++ b/core/core-performance/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     testImplementation(libs.kotlinStdlib)
     testImplementation(libs.junit)
     testImplementation(libs.truth)
-    testImplementation(libs.robolectric)
+    testImplementation("org.robolectric:robolectric:4.7") // TODO(b/206673076): use libs.robolectric
 }
 
 androidx {
