Update fragment-ktx savedstate dependency to match
fragment updated to depend on ToT savedstate so
fragment-ktx should also be updated to depend
on ToT savedstate-ktx.

Test: ./gradlew bOS
Change-Id: Ic5e86561d3fda145fa14ab8bc6391156dbe43273

--- a/fragment/fragment-ktx/build.gradle
+++ b/fragment/fragment-ktx/build.gradle
@@ -39,7 +39,7 @@ dependencies {
         because 'Mirror fragment dependency graph for -ktx artifacts'
     }
     api("androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1")
-    api("androidx.savedstate:savedstate-ktx:1.1.0") {
+    api(projectOrArtifact(":savedstate:savedstate-ktx")) {
         because 'Mirror fragment dependency graph for -ktx artifacts'
     }
     api(libs.kotlinStdlib)
