Updated docs-public/build.gradle for the following artifacts:
- androidx.slidingpanelayout:slidingpanelayout:1.2.0-rc01
- androidx.window 1.0.0-beta04
- androidx.camera 1.1.0-alpha11 and 1.0.0-alpha31
- androidx.coordinatorlayout 1.2.0-beta01

This commit was partially generated from the command:
./import_release_prebuilts.py --source 7925428 --groups androidx.slidingpanelayout

Test: ./gradlew buildOnServer
Change-Id: I79345a7cddba0673c663e5dcd2cbc1a28964f84f

--- a/docs-public/build.gradle
+++ b/docs-public/build.gradle
@@ -31,13 +31,13 @@ dependencies {
     docs("androidx.biometric:biometric-ktx:1.2.0-alpha04")
     samples("androidx.biometric:biometric-ktx-samples:1.2.0-alpha04")
     docs("androidx.browser:browser:1.4.0")
-    docs("androidx.camera:camera-camera2:1.1.0-alpha10")
-    docs("androidx.camera:camera-core:1.1.0-alpha10")
-    docs("androidx.camera:camera-extensions:1.0.0-alpha30")
+    docs("androidx.camera:camera-camera2:1.1.0-alpha11")
+    docs("androidx.camera:camera-core:1.1.0-alpha11")
+    docs("androidx.camera:camera-extensions:1.0.0-alpha31")
     stubs(fileTree(dir: "../camera/camera-extensions-stub", include: ["camera-extensions-stub.jar"]))
-    docs("androidx.camera:camera-lifecycle:1.1.0-alpha10")
-    docs("androidx.camera:camera-video:1.1.0-alpha10")
-    docs("androidx.camera:camera-view:1.0.0-alpha30")
+    docs("androidx.camera:camera-lifecycle:1.1.0-alpha11")
+    docs("androidx.camera:camera-video:1.1.0-alpha11")
+    docs("androidx.camera:camera-view:1.0.0-alpha31")
     docs("androidx.car.app:app:1.2.0-alpha01")
     docs("androidx.car.app:app-automotive:1.2.0-alpha01")
     docs("androidx.car.app:app-projected:1.2.0-alpha01")
@@ -92,7 +92,7 @@ dependencies {
     docs("androidx.concurrent:concurrent-futures:1.1.0")
     docs("androidx.concurrent:concurrent-futures-ktx:1.1.0")
     docs("androidx.contentpager:contentpager:1.0.0")
-    docs("androidx.coordinatorlayout:coordinatorlayout:1.2.0-alpha01")
+    docs("androidx.coordinatorlayout:coordinatorlayout:1.2.0-beta01")
     docs("androidx.core:core-google-shortcuts:1.1.0-alpha02")
     docs("androidx.core:core-role:1.1.0-alpha02")
     docs("androidx.core:core-animation:1.0.0-alpha02")
@@ -227,7 +227,7 @@ dependencies {
     docs("androidx.slice:slice-builders-ktx:1.0.0-alpha08")
     docs("androidx.slice:slice-core:1.1.0-alpha02")
     docs("androidx.slice:slice-view:1.1.0-alpha02")
-    docs("androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01")
+    docs("androidx.slidingpanelayout:slidingpanelayout:1.2.0-rc01")
     docs("androidx.sqlite:sqlite:2.2.0-beta02")
     docs("androidx.sqlite:sqlite-framework:2.2.0-beta02")
     docs("androidx.sqlite:sqlite-ktx:2.2.0-beta02")
@@ -278,13 +278,13 @@ dependencies {
     samples("androidx.wear:wear-input-samples:1.2.0-alpha01")
     docs("androidx.wear:wear-input-testing:1.2.0-alpha02")
     docs("androidx.webkit:webkit:1.4.0")
-    docs("androidx.window:window:1.0.0-beta03")
+    docs("androidx.window:window:1.0.0-beta04")
     stubs(fileTree(dir: "../window/stubs/", include: ["window-sidecar-release-0.1.0-alpha01.aar"]))
     stubs("androidx.window:window-extensions:1.0.0-alpha01")
-    docs("androidx.window:window-java:1.0.0-beta03")
-    docs("androidx.window:window-rxjava2:1.0.0-beta03")
-    docs("androidx.window:window-rxjava3:1.0.0-beta03")
-    docs("androidx.window:window-testing:1.0.0-beta03")
+    docs("androidx.window:window-java:1.0.0-beta04")
+    docs("androidx.window:window-rxjava2:1.0.0-beta04")
+    docs("androidx.window:window-rxjava3:1.0.0-beta04")
+    docs("androidx.window:window-testing:1.0.0-beta04")
     docs("androidx.work:work-gcm:2.7.1")
     docs("androidx.work:work-multiprocess:2.7.1")
     docs("androidx.work:work-runtime:2.7.1")
