Require a context to create a PerformanceClass
Test: ./gradlew :core:core-performance:testDebugUnitTest
Bug: 205731854
Change-Id: I7ecbb200f94ab37f4f66ce6ec948476ff2dbe7d2

--- a/core/core-performance/build.gradle
+++ b/core/core-performance/build.gradle
@@ -26,6 +26,8 @@ plugins {
 
 dependencies {
     api(libs.kotlinStdlib)
+
+    testImplementation(libs.testCore)
     testImplementation(libs.kotlinStdlib)
     testImplementation(libs.junit)
     testImplementation(libs.truth)
