Image accepts BitmapImageProvider in glance-wear
Relnote: Image acceptes BitmapImageProvider as well in glance-wear
Test: .gradlew :glance.glance-wear:test && ./gradlew
:glance.glance-wear:connectedcheck

Change-Id: I525dd2a05874138e6df6ec67bd0397ae0bd79553

--- a/glance/glance-wear/build.gradle
+++ b/glance/glance-wear/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-service:2.3.1"
 
+    testImplementation(project(":core:core-ktx"))
     testImplementation(libs.testCore)
     testImplementation(libs.testRules)
     testImplementation(libs.testRunner)
@@ -59,6 +60,7 @@ dependencies {
     testImplementation("androidx.wear.tiles:tiles-renderer:1.0.0-alpha12")
     testImplementation("androidx.wear.tiles:tiles-testing:1.0.0-alpha12")
 
+    androidTestImplementation(project(":core:core-ktx"))
     androidTestImplementation("androidx.core:core:1.7.0")
     androidTestImplementation(project(":test:screenshot:screenshot"))
     androidTestImplementation("androidx.wear.tiles:tiles-renderer:1.0.0-alpha12")
