--- a/core/core-performance/build.gradle
+++ b/core/core-performance/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 androidx {
     name = "androidx.core:core-performance"
     type = LibraryType.PUBLISHED_LIBRARY
-    mavenVersion = LibraryVersions.CORE
+    mavenVersion = LibraryVersions.CORE_PERFORMANCE
     mavenGroup = LibraryGroups.CORE
     inceptionYear = "2021"
     description = "This libraray makes it easy for developers to make UI and feature choices based on Android Performance Class level for GMS devices."
