Create empty Sample project for Core Performance
Test: n/a
Bug: 205731854
Relnote: N/A

Change-Id: Ia965d452cf909940189252ec5649206769516ead

--- a/docs-tip-of-tree/build.gradle
+++ b/docs-tip-of-tree/build.gradle
@@ -101,6 +101,7 @@ dependencies {
     docs(project(":core:core-google-shortcuts"))
     docs(project(":core:core-ktx"))
     docs(project(":core:core-performance"))
+    samples(project(":core:core-performance:core-performance-samples"))
     docs(project(":core:core-remoteviews"))
     docs(project(":core:core-splashscreen"))
     docs(project(":core:core-role"))
