--- a/core/core-performance/samples/build.gradle
+++ b/core/core-performance/samples/build.gradle
@@ -26,7 +26,8 @@ plugins {
 
 dependencies {
     api(libs.kotlinStdlib)
-    // Add dependencies here
+    implementation project(path: ':core:core-performance')
+    implementation project(path: ':annotation:annotation-sampled')
 }
 
 androidx {
