--- a/wear/wear/build.gradle
+++ b/wear/wear/build.gradle
@@ -52,6 +52,10 @@ android {
         androidTest.assets.srcDirs += project.rootDir.absolutePath + "/../../golden/wear/wear"
     }
 
+    buildTypes.all {
+        consumerProguardFiles "proguard-rules.pro"
+    }
+
     // Use Robolectric 4.+
     testOptions.unitTests.includeAndroidResources = true
 }
