Moving all possible Jetpack dependencies to explicit versions
We must keep :core:core-remoteviews as it will be released at the same
time as Glance

Bug: 197214267
Test: n/a
Relnote: n/a
Change-Id: I3a0509c34f1f77baa1cd58be6be10b3b269566bb

--- a/glance/glance-appwidget/build.gradle
+++ b/glance/glance-appwidget/build.gradle
@@ -40,16 +40,15 @@ dependencies {
     api("androidx.compose.ui:ui-graphics:1.1.0-beta01")
     api("androidx.compose.ui:ui-unit:1.1.0-beta01")
 
-    implementation project(path: ':core:core-remoteviews')
-    implementation project(path: ':core:core-ktx')
-    implementation project(path: ':datastore:datastore-core')
-    implementation project(path: ':datastore:datastore')
+    implementation('androidx.core:core-ktx:1.7.0')
+    implementation("androidx.datastore:datastore:1.0.0")
+    implementation("androidx.datastore:datastore-core:1.0.0")
     implementation("androidx.datastore:datastore-preferences-core:1.0.0")
     implementation("androidx.datastore:datastore-preferences:1.0.0")
+    implementation(project(':core:core-remoteviews'))
     implementation(project(":glance:glance-appwidget-proto"))
     implementation(libs.kotlinStdlib)
 
-    testImplementation(project(":core:core-ktx"))
     testImplementation(libs.junit)
     testImplementation(libs.kotlinCoroutinesTest)
     testImplementation(libs.kotlinTest)
@@ -61,13 +60,14 @@ dependencies {
     testImplementation(libs.testRunner)
     testImplementation(libs.truth)
     testImplementation(libs.kotlinReflect)
+    testImplementation('androidx.core:core-ktx:1.7.0')
     testImplementation("androidx.datastore:datastore-core:1.0.0")
     testImplementation("androidx.datastore:datastore-preferences-core:1.0.0")
     testImplementation("androidx.datastore:datastore-preferences:1.0.0")
 
-    androidTestImplementation("androidx.test.uiautomator:uiautomator:2.2.0")
     androidTestImplementation(project(":test:screenshot:screenshot"))
-    androidTestImplementation(project(":core:core-ktx"))
+    androidTestImplementation("androidx.test.uiautomator:uiautomator:2.2.0")
+    androidTestImplementation('androidx.core:core-ktx:1.7.0')
     androidTestImplementation(libs.espressoCore)
     androidTestImplementation(libs.espressoIdlingResource)
     androidTestImplementation(libs.kotlinCoroutinesTest)
