--- a/glance/glance-appwidget-proto/build.gradle
+++ b/glance/glance-appwidget-proto/build.gradle
@@ -37,7 +37,7 @@ configurations {
 dependencies {
     api(libs.kotlinStdlib)
 
-    implementation project(path: ':datastore:datastore-core')
+    implementation("androidx.datastore:datastore-core:1.0.0")
 
     shadowed(libs.protobufLite)
 }
