--- a/settings.gradle
+++ b/settings.gradle
@@ -502,7 +502,7 @@ includeProject(":glance:glance-appwidget", "glance/glance-appwidget", [BuildType
 includeProject(":glance:glance-appwidget-proto", "glance/glance-appwidget-proto", [BuildType.MAIN])
 includeProject(":glance:glance-appwidget:integration-tests:demos", "glance/glance-appwidget/integration-tests/demos", [BuildType.MAIN])
 includeProject(":glance:glance-appwidget:glance-layout-generator", "glance/glance-appwidget/glance-layout-generator", [BuildType.MAIN])
-includeProject(":glance:glance-wear", "glance/glance-wear", [BuildType.MAIN])
+includeProject(":glance:glance-wear-tiles", "glance/glance-wear-tiles", [BuildType.MAIN])
 includeProject(":graphics:graphics-core", "graphics/graphics-core", [BuildType.MAIN])
 includeProject(":gridlayout:gridlayout", "gridlayout/gridlayout", [BuildType.MAIN])
 includeProject(":health:health-services-client", "health/health-services-client", [BuildType.MAIN])
