--- a/docs-tip-of-tree/build.gradle
+++ b/docs-tip-of-tree/build.gradle
@@ -137,7 +137,7 @@ dependencies {
     docs(project(":fragment:fragment-testing"))
     docs(project(":glance:glance"))
     docs(project(":glance:glance-appwidget"))
-    docs(project(":glance:glance-wear"))
+    docs(project(":glance:glance-wear-tiles"))
     docs(project(":gridlayout:gridlayout"))
     docs(project(":health:health-services-client"))
     docs(project(":heifwriter:heifwriter"))
