Revert "Create ShortcutAdapter that converts document to shortcut and vice versa"
This reverts commit 8f31164518d330ed01716b92bd27507bf0f5a68e.

Reason for revert: Broke the build

Change-Id: I6db89314e73d6009fcba7335725f19539f9a6e47

--- a/appsearch/appsearch-builtin-types/src/androidTest/AndroidManifest.xml
+++ b/appsearch/appsearch-builtin-types/src/androidTest/AndroidManifest.xml
@@ -15,4 +15,5 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="androidx.appsearch.builtintypes.test"/>
+          package="androidx.appsearch.builtintypes.test">
+</manifest>
