--- a/appsearch/appsearch-builtin-types/build.gradle
+++ b/appsearch/appsearch-builtin-types/build.gradle
@@ -25,7 +25,7 @@ plugins {
 
 dependencies {
     implementation project(":appsearch:appsearch")
-    implementation project(':core:core')
+    implementation('androidx.core:core:1.2.0')
 
     annotationProcessor project(':appsearch:appsearch-compiler')
 
