Add new actions to samples
- Add all launchable actions in ActionAppWidget.kt
- Add a checkbox in ScrollableAppWidget.kt to showcase compound button actions inside a list

Test: manual
Change-Id: Ib0c05c071c1d9d7cbaafd650884148e7e1fcf38c

--- a/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
+++ b/glance/glance-appwidget/integration-tests/demos/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         </activity>
 
         <activity android:name=".ActionDemoActivity" />
+        <service android:name=".ActionDemoService" />
 
         <activity android:name=".ListClickDestinationActivity" android:exported="false" />
 
