--- a/work/work-runtime/src/androidTest/AndroidManifest.xml
+++ b/work/work-runtime/src/androidTest/AndroidManifest.xml
@@ -23,5 +23,5 @@
       ~ need this permission for tests.
     -->
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-
+    <application android:name="androidx.multidex.MultiDexApplication"/>
 </manifest>
