--- a/settings.gradle
+++ b/settings.gradle
@@ -23,11 +23,25 @@ buildscript {
     }
 
     dependencies {
-        classpath("com.gradle:gradle-enterprise-gradle-plugin:3.6.3")
+        classpath("com.gradle:gradle-enterprise-gradle-plugin:3.7.2")
     }
 }
 
 apply(plugin: "com.gradle.enterprise")
+
+gradleEnterprise {
+    server = "https://ge.androidx.dev"
+
+    buildScan {
+        capture {
+            taskInputFiles = true
+        }
+        obfuscation {
+            hostname { host -> "unset" }
+            ipAddresses { addresses -> addresses.collect { address -> "0.0.0.0"} }
+        }
+    }
+}
 
 rootProject.name = "androidx"
 
