Configuration caching fix for project subsets
Bug: 207407626

Test: ./gradlew -Pandroidx.projects=compose bOS -m && \
      ./gradlew -Pandroidx.projects=compose bOS -m && \
      ./gradlew -Pandroidx.projects=main bOS -m && \
      ./gradlew -Pandroidx.projects=main bOS -m # and see that the correct project subset was used in each case

Test: git revert f5437ee592490039affe7ff019bb7d05f738018c && ./gradlew :buildSrc-tests:project-subsets:test # and see that it fails
Change-Id: Ic8475528d4f22456fae4894eb1a00ff0d7ced536

--- a/settings.gradle
+++ b/settings.gradle
@@ -88,11 +88,14 @@ enum BuildType {
 }
 
 private String getRequestedProjectSubsetName() {
-    if (startParameter.projectProperties.containsKey("androidx.projects")) {
-        return startParameter.projectProperties["androidx.projects"].toUpperCase()
+    def prop = providers.gradleProperty("androidx.projects").forUseAtConfigurationTime()
+    if (prop.isPresent()) {
+        return prop.get().toUpperCase()
     }
-    if (System.getenv().containsKey("ANDROIDX_PROJECTS")) {
-        return System.getenv()["ANDROIDX_PROJECTS"].toUpperCase()
+
+    def envProp = providers.environmentVariable("ANDROIDX_PROJECTS").forUseAtConfigurationTime()
+    if (envProp.isPresent()) {
+        return envProp.get().toUpperCase()
     }
     return null
 }
