Add viewpager2 + compose interop demo.
This CL adds a demo to demonstrate interoperability between viewpager2 and compose (or lack of thereof).

Bug: n/a
Test: DemoTest
Change-Id: I4357defaa56d22689d0c4364701bfa3f41cd3910

--- a/compose/ui/ui/integration-tests/ui-demos/build.gradle
+++ b/compose/ui/ui/integration-tests/ui-demos/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 
     implementation("androidx.fragment:fragment-ktx:1.2.5")
     implementation("androidx.recyclerview:recyclerview:1.1.0")
+    implementation("androidx.viewpager2:viewpager2:1.0.0")
 }
 
 android {
